--- a/b/bd/bda/bdafrica.com.html
+++ b/b/bd/bda/bdafrica.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the bdafrica.com privacy policy that was archived on 2013-05-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130520230819id_/http%3A//www.businessdailyafrica.com/meta/-/539554/1130060/-/j6u5wjz/-/index.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bdafrica.com privacy policy that was archived on 2013-12-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224044325id_/http%3A//www.businessdailyafrica.com/meta/-/539554/1130060/-/j6u5wjz/-/index.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml"><head>
-		<link type="application/rss+xml" title="" rel="alternate" href="/meta/-/539554/539554/-/view/asFeed/-/11bqir/-/index.xml">
-		<title>Privacy Policy - Footer - businessdailyafrica.com</title><meta http-equiv="content-type" content="text/html;charset=UTF-8">
+<link type="application/rss+xml" title="" rel="alternate" href="/meta/-/539554/539554/-/view/asFeed/-/11bqir/-/index.xml">
+<title>Privacy Policy - Footer - businessdailyafrica.com</title><meta http-equiv="content-type" content="text/html;charset=UTF-8">
 <meta name="robots" content="index, follow">
 <meta property="fb:app_id" content="642624442417905">
 <meta property="fb:admins" content="1830875453">
@@ -14,7 +14,7 @@
 	<meta property="og:url" content="http://www.businessdailyafrica.com/meta/-/539554/1130060/-/j6u5wjz/-/index.html">
 <link rel="canonical" href="http://www.businessdailyafrica.com/meta/-/539554/1130060/-/j6u5wjz/-/index.html">
 <link type="application/rss+xml" title="" rel="alternate" href="http://www.businessdailyafrica.com/meta/-/539554/539554/-/view/asFeed/-/11bqir/-/index.xml">
-<link rel="shortcut icon" href="/image/view/-/539444/favicon/515523/-/xgeswd/-/BusinessDaily.ico" type="image/x-icon"><link href="/image/view/-/1527956/data/407653/-/vur3jgz/-/AppleIcon.png" rel="apple-touch-icon" type="image/png">
+<link rel="shortcut icon" href="/image/view/-/539444/favicon/651312/-/y2uvcu/-/BusinessDaily.ico" type="image/x-icon"><link href="/image/view/-/1527956/data/407662/-/vur3ilz/-/AppleIcon.png" rel="apple-touch-icon" type="image/png">
 <link rel="stylesheet" type="text/css" href="/code/view/BusinessDaily/-/4/-/170ciuz/-/base.css">
 <link rel="stylesheet" type="text/css" href="/code/view/BusinessDaily/-/16/-/127b3poz/-/print_base.css">
 <!--[if lte IE 7]>
@@ -39,7 +39,7 @@
 <link rel="stylesheet" type="text/css" href="/code/view/BusinessDaily/-/539588/-/ftn2qhz/-/content.css">
 <link rel="stylesheet" type="text/css" href="/code/view/BusinessDaily/-/539590/-/ftn2ptz/-/custom.css">
 <link rel="stylesheet" type="text/css" href="/code/view/BusinessDaily/-/539592/-/ftn2prz/-/patch_generic.css">
-<script async="" src="https://sb.scorecardresearch.com/beacon.js"></script><script async="" src="http://a.visualrevenue.com/vrs.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=642624442417905"></script><script type="text/javascript" language="javascript" src="/code/view/BusinessDaily/-/1707960/-/fki0vk/-/jquery.js"></script>
+<script async="" src="http://a.visualrevenue.com/vrs.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=642624442417905"></script><script type="text/javascript" language="javascript" src="/code/view/BusinessDaily/-/1707960/-/fki0vk/-/jquery.js"></script>
 <script type="text/javascript" language="javascript" src="/code/view/BusinessDaily/-/1705034/-/fkgf4k/-/levitator.js"></script>
 <script type="text/javascript" language="javascript" src="/code/view/BusinessDaily/-/1198/-/maxr4tz/-/plugin.js"></script>
 <script type="text/javascript" language="javascript" src="/code/view/BusinessDaily/-/1200/-/maxqkkz/-/rating.js"></script>
@@ -97,7 +97,8 @@ x.parentNode.insertBefore(s, x);
 })(document, 'script');
 </script>
 <!-- End of VR RR Tracking Script - All rights reserved --><analytics:head>
-	
+
+
 
 <div id="levitator" class="levitator" style="display: none;">
 	<div class="close"><a href="#">CLOSE X</a></div>
@@ -105,7 +106,7 @@ x.parentNode.insertBefore(s, x);
 </div>
 <div id="page_shadows">
     <div id="page_margins">
-        <analytics:pagecontext object="com.coremedia.starterkit.cae.contentbeans.PageImpl$$@6229e834" view="DEFAULT">
+        <analytics:pagecontext object="com.coremedia.starterkit.cae.contentbeans.PageImpl$$@76de84c6" view="DEFAULT">
 		 <a href="" target="_blank"><div id="skinleftlink"></div></a>
 		<a href="" target="_blank"><div id="skinrightlink"></div></a> 
         <div id="page">
@@ -125,7 +126,7 @@ x.parentNode.insertBefore(s, x);
   </a></div>
     <div class="date"><b style="{ text-transform: uppercase; }">
   Tuesday </b><br>
-May 21,&nbsp;
+December 24,&nbsp;
 2013</div>
   <div class="halfbanner">
       <analytics:objectcontext object="com.coremedia.mauritius.cae.contentbeans.MauAdLocationImpl$$[id=540062]" logview="true">
@@ -163,7 +164,7 @@ GA_googleFillSlot("adslot_bd_234x60");
     <a id="navigation" name="navigation_"></a>
     <!-- skiplink anchor: navigation -->
     <div id="nav_main">
-       <div id="ddtabmenu" class="ddcolortabs">
+      <div id="ddtabmenu" class="ddcolortabs">
     <ul>
       <li>
             <a href="/Corporate-News/-/539550/539550/-/1565as2/-/index.html" rel="ct2">Corporate News</a></li>
@@ -174,11 +175,11 @@ GA_googleFillSlot("adslot_bd_234x60");
         <li>
             <a href="/Special-Reports/-/546918/546918/-/j75ipp/-/index.html" rel="ct5">Special Reports</a></li>
         <li>
-            <a href="/Life/-/547058/547058/-/s90vtr/-/index.html" rel="ct7">Life</a></li>
+            <a href="/BDLife/-/1248942/1248942/-/11gq6e8z/-/index.html" rel="ct8">BDLife</a></li>
         <li>
-            <a href="/Downloads/-/1180644/1180644/-/vdl048z/-/index.html" rel="ct9">Downloads</a></li>
+            <a href="/Downloads/-/1180644/1180644/-/vdl048z/-/index.html" rel="ct10">Downloads</a></li>
         <li>
-            <a href="/-/1248928/1248928/-/14xq5y0/-/index.html" rel="ct10">Magazines</a></li>
+            <a href="/-/1248928/1248928/-/14xq5y0/-/index.html" rel="ct11">Magazines</a></li>
         </ul>
   </div>
 <div id="navtools">
@@ -242,10 +243,14 @@ GA_googleFillSlot("adslot_bd_234x60");
             <div id="ct9" class="tabcontent">
                 </div>
             <div id="ct10" class="tabcontent">
-                <a href="/BDLife/-/1248942/1248942/-/11gq6e8z/-/index.html">BDLife</a>|<a href="/Digital-Business/-/1248938/1248938/-/tuxhyuz/-/index.html">Digital Business</a>|<a href="/Special-Reports/Enterprise/-/546922/546922/-/vc0u2i/-/index.html">Enterprise</a>|<a href="/MBA/-/1640714/1640714/-/6yporuz/-/index.html">MBA</a></div>
-            <div id="ct11" class="tabcontent">
                 </div>
+            <div id="ct11" class="tabcontent">
+                <a href="/BDLife/-/1248942/1248942/-/11gq6e8z/-/index.html">BDLife</a>|<a href="/Digital-Business/-/1248938/1248938/-/tuxhyuz/-/index.html">Digital Business</a>|<a href="/Special-Reports/Enterprise/-/546922/546922/-/vc0u2i/-/index.html">Enterprise</a>|<a href="/MBA/-/1640714/1640714/-/6yporuz/-/index.html">MBA</a></div>
             <div id="ct12" class="tabcontent">
+                </div>
+            <div id="ct13" class="tabcontent">
+                </div>
+            <div id="ct14" class="tabcontent">
                 </div>
             <div id="ct7">
        <script type="text/javascript">
@@ -259,7 +264,6 @@ GA_googleFillSlot("adslot_bd_234x60");
 <div id="headerleft">
   </div>
 <div id="main" style="width: 950px">
-			
               <a id="content" name="content_"></a>
                 <!-- Article Page Sidebar -->
                 <div class="subcolumns" id="contentwrapper">
@@ -340,20 +344,21 @@ GA_googleFillSlot("Bd-300x250-slot1-content");
         <li><a href="javascript:void(0);" class="selected">Most Popular</a></li>
       </ul>
       <ul class="newslist">
-        <li><a href="/Corporate-News/Kenya-Power-puts-Mama-Ngina-on-top-shareholders-list/-/539550/1857144/-/a58fcl/-/index.html">Mama Ngina listed among Kenya Power's top shareholders</a></li>
-        <li><a href="/JP-Morgan-gets-licence-to-set-up-office-in-Kenya/-/539552/1857078/-/vwlqcd/-/index.html">JP Morgan gets licence to set up office in Kenya</a></li>
-        <li><a href="/Corporate-News/Equity-Bank-moves-closer-to-becoming-a-foreign-lender/-/539550/1857148/-/12b8gykz/-/index.html">Equity Bank moves closer to becoming a foreign lender</a></li>
-        <li><a href="/Questionable-land-deals-put-KAA-bosses-in-audit-trouble/-/539546/1857240/-/oqwm9iz/-/index.html">Questionable land deals put KAA bosses in audit trouble</a></li>
-        <li><a href="/How-three-brothers-turned-Sh5000-into-one-million-dollars/-/1248928/1851394/-/de86db/-/index.html">How three brothers turned Sh5,000 into one million dollars</a></li>
-        <li><a href="/Economy-pays-the-price-of-prolonged-political-contest/-/539552/1857318/-/1yp9e3z/-/index.html">Economy pays the price of prolonged political contest</a></li>
-        <li><a href="/Corporate-News/Entrepreneur-mints-millions-from-nuts/-/539550/1854890/-/vqimfrz/-/index.html">Entrepreneur mints millions from nuts</a></li>
-        <li><a href="/Maryanne-Ndegwa-dream-was-to-be-a-chef/-/1248928/1854500/-/d7crfz/-/index.html">Maryanne Ndegwa: This CEO’s dream was to be a chef</a></li>
-        <li><a href="/Corporate-News/Maternity-hospital-vacates-premises-after-controversy/-/539550/1857174/-/331axdz/-/index.html">Maternity hospital vacates premises after controversy</a></li>
-        <li><a href="/Changing-face-of-old-shopping-centres/-/1248928/1854498/-/2i8ufbz/-/index.html">Changing face of old shopping centres</a></li>
-        <li><a href="/Balala-sets-out-priorities-for-mining-sector/-/539546/1857208/-/pwtuo8/-/index.html">Balala sets out priorities for mining sector</a></li>
-        <li><a href="/Kenyan-shilling-steady-boost-seen-from-overseas-investments/-/539552/1857754/-/76646y/-/index.html">Kenyan shilling steady, boost seen from overseas investments</a></li>
-        <li><a href="/Corporate-News/K-Rep-Bank-taps-into-water-projects-to-boost-growth/-/539550/1857978/-/13n7iolz/-/index.html">K-Rep Bank taps into water projects to boost growth</a></li>
-        <li><a href="/Agency-banking-racing-to-catch-up-with-mobile-money/-/539552/1857746/-/rq112y/-/index.html">Agency banking racing to catch up with mobile money</a></li>
+        <li><a href="/Corporate-News/Michael-Joseph-leads-revamp-of-M-Pesa-in-S--Africa/-/539550/2122198/-/bisu0yz/-/index.html">Michael Joseph leads revamp of M-Pesa in South Africa</a></li>
+        <li><a href="/Kenyan-firm-earns-Sh2-5bn-from-sale-of-oil-block-stake/-/539552/2122034/-/i4c1vrz/-/index.html">Kenyan firm earns Sh2.5bn from sale of oil block stake</a></li>
+        <li><a href="/Going-to-the-Coast/-/1248928/2118908/-/ones36z/-/index.html">Going to the Coast? Fly, bus or drive?</a></li>
+        <li><a href="/Corporate-News/Aljazeera-and-HR-firm-lock-horns-over-Nairobi-office-jobs/-/539550/2122158/-/2ecrov/-/index.html">Aljazeera, HR firm lock horns over Nairobi office jobs</a></li>
+        <li><a href="/Corporate-News/Tuskys-loses-Sh100m-in-day-long-strike/-/539550/2122120/-/gwhn0z/-/index.html">Tuskys loses Sh100m in day-long strike over salary review</a></li>
+        <li><a href="/Base-Titanium-now-seeks-permit-for-Kenyan-exports/-/539546/2122296/-/12mlykhz/-/index.html">Base Titanium now seeks permit for Kenyan exports</a></li>
+        <li><a href="/Corporate-News/Consumer-confidence-rises-as-year-ends/-/539550/2122302/-/pq0c73/-/index.html"> Kenyans to spend more over Xmas as confidence rises</a></li>
+        <li><a href="/Opinion-and-Analysis/Work-permit-policy-should-attract/-/539548/2122976/-/ottu4vz/-/index.html">Work permit policy should attract, not stifle investment</a></li>
+        <li><a href="/Who-are-Kenya-s-wealthiest-/-/1248928/2109386/-/n7tpnm/-/index.html">Who are Kenya’s wealthiest?</a></li>
+        <li><a href="/Counties-go-after-ghost-workers-with-biometric-scanners/-/539546/2122256/-/jhbyre/-/index.html">Counties go after ghost workers with biometric scanners</a></li>
+        <li><a href="/Corporate-News/Naivasha-hotels-record-full-bookings-as-tourists-flock-to-town/-/539550/2122968/-/2semd0/-/index.html">Naivasha hotels record full bookings as tourists flock to town</a></li>
+        <li><a href="/Financial-blunders-to-avoid-during-the-festive-season/-/539444/2122014/-/14y4hd/-/index.html">Financial blunders to avoid during the festive season</a></li>
+        <li><a href="/I-M-Bank-bond-offer-surpasses-Sh3-billion-target/-/539552/2122046/-/n76fknz/-/index.html">I&amp;M Bank bond offer surpasses Sh3 billion target</a></li>
+        <li><a href="/Royal-Family-jeweller-opens-shop-in-Nairobi/-/1248928/2118746/-/5bgp9oz/-/index.html">Royal Family jeweller opens shop in Nairobi</a></li>
+        <li><a href="/Corporate-News/State-takes-Lafarge-to-the-competition-chief-in-Portland-row/-/539550/2122244/-/b7joxhz/-/index.html">State takes Lafarge to the competition chief in Portland row</a></li>
         </ul>
     </div>
   </div>
@@ -473,18 +478,4 @@ GA_googleFillSlot("BD-footer-728x90");
       pageTracker._trackPageview();
     </script>
     
-<!-- Begin comScore Tag -->
-<script>
-  var _comscore = _comscore || [];
-  _comscore.push({ c1: "2", c2: "7655454" });
-  (function() {
-    var s = document.createElement("script"), el = document.getElementsByTagName("script")[0]; s.async = true;
-    s.src = (document.location.protocol == "https:" ? "https://sb" : "http://b") + ".scorecardresearch.com/beacon.js";
-    el.parentNode.insertBefore(s, el);
-  })();
-</script>
-<noscript>
-  <img src="http://b.scorecardresearch.com/p?c1=2&c2=7655454&cv=2.0&cj=1" />
-</noscript>
-<!-- End comScore Tag -->
 </analytics:head></body></html>
