--- a/g/ga/gam/gamestiny.com.html
+++ b/g/ga/gam/gamestiny.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gamestiny.com privacy policy that was archived on 2013-05-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130508033819id_/http%3A//gamestiny.com/About/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gamestiny.com privacy policy that was archived on 2013-12-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224045307id_/http%3A//gamestiny.com/About/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en-gb"><head>
 <meta name="google-site-verification" content="FN2tAklYL_mKJZOSE-0WcoN6LQ7dIneL6K1ndY4t8bY">
@@ -13,6 +13,18 @@
   <title>Privacy Policy | About</title>
   <link href="/templates/ja_edenite/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link rel="stylesheet" href="http://gamestiny.com/plugins/content/extranews/css/extranews.css" type="text/css">
+  <style type="text/css">
+    <!--
+
+        a.flag {font-size:32px;padding:1px 0;background-repeat:no-repeat;background-image:url('/modules/mod_gtranslate/tmpl/lang/32a.png');}
+        a.flag:hover {background-image:url('/modules/mod_gtranslate/tmpl/lang/32.png');}
+        a.flag img {border:0;}
+        a.alt_flag {font-size:32px;padding:1px 0;background-repeat:no-repeat;background-image:url('/modules/mod_gtranslate/tmpl/lang/alt_flagsa.png');}
+        a.alt_flag:hover {background-image:url('/modules/mod_gtranslate/tmpl/lang/alt_flags.png');}
+        a.alt_flag img {border:0;}
+    
+    -->
+  </style>
   <script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=189265727752770"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/media/system/js/mootools.js"></script>
   <script type="text/javascript" src="/media/system/js/caption.js"></script>
 
@@ -47,7 +59,6 @@ h1.logo a {
 </style>
 <![endif]-->
 
-<script src="http://gamestiny.com/media/system/js/jquery-1.6.4.min.js" type="text/javascript"></script>
 <script type="text/javascript">
 	jQuery.noConflict();
 </script>
@@ -246,8 +257,7 @@ function searchGameForm(){
 </tr>
 </tbody>
 </table>
-<center>
-<span style="color: #ff6600;"><strong><span style="font-size: 12pt;">Sponsored Links</span></strong></span>
+<center> <span style="color: #ff6600;"><strong><span style="font-size: 12pt;">Advertisements</span></strong></span>
 <p>
 <script type="text/javascript">
 google_ad_client = "ca-pub-0661418219249320";
@@ -257,7 +267,8 @@ google_ad_width = 728;
 google_ad_height = 90;
 </script>
 <script src="http://pagead2.googlesyndication.com/pagead/show_ads.js" type="text/javascript"></script>
-</p></center>
+</p>
+</center>
 </div>
 
 <!-- END: MAIN NAVIGATION -->
@@ -343,7 +354,7 @@ google_ad_height = 90;
 var cpmstar_rnd=Math.round(Math.random()*999999);
 var cpmstar_pid=29925;
 document.writeln("<SCR"+"IPT language='Javascript' src='http://server.cpmstar.com/view.aspx?poolid="+cpmstar_pid+"&script=1&rnd="+cpmstar_rnd+"'></SCR"+"IPT>");
-</script><script language="Javascript" src="http://server.cpmstar.com/view.aspx?poolid=29925&amp;script=1&amp;rnd=811083"></script>
+</script><script language="Javascript" src="http://server.cpmstar.com/view.aspx?poolid=29925&amp;script=1&amp;rnd=127273"></script>
 
 <!-- END: Modules Anywhere --></div>
 <!-- END: ADS 728x90 -->
@@ -356,7 +367,9 @@ document.writeln("<SCR"+"IPT language='Javascript' src='http://server.cpmstar.co
 <div id="ja-footer">
 	<div class="footer-wrap">
     	                <div style="margin: 8px 0 10px;">
-            <p><img alt="gameglobo_social" src="/images/stories/gameglobo_social.gif"></p><p><a href="http://www.gamerightnow.com/scooby-doo.html" target="_blank">Scooby Doo Games</a> | <a href="http://www.gamerightnow.com/bakugan.html" target="_blank"> Bakugan Games</a> |  <a href="http://www.gamerightnow.com/transformers.html" target="_blank"> Transformers Games</a> |  <a href="http://www.gamerightnow.com/pink-panther.html" target="_blank"> Pink Panther Games</a> |  <a href="http://www.gamerightnow.com/johnny-bravo.html" target="_blank"> Johnny Bravo Games</a> |  <a href="http://www.gamerightnow.com/beyblade.html" target="_blank"> Beyblade Games</a> |   <a href="http://www.gamerightnow.com/pokemon.html" target="_blank"> Pokemon Games</a>  |  <a href="http://www.gamerightnow.com/teen-titan.html" target="_blank"> teen titan games</a>  |  <a href="http://www.gamerightnow.com/kungfu-panda.html" target="_blank"> Kungfu Panda games</a>  |  <a href="http://www.gamerightnow.com/the-simpsons.html" target="_blank"> The Simpsons games</a>  |  <a href="http://www.gamerightnow.com/hulk.html" target="_blank"> Hulk games</a>  |  <a href="http://www.gamerightnow.com/iron-man.html" target="_blank"> Iron Man games</a>  |  <a href="http://www.gamerightnow.com/thor.html" target="_blank"> Thor games</a>  |  <a href="http://www.gamerightnow.com/action-games/ultimate-spiderman-iron-spider-3460.html" target="_blank"> Ultimate Spider-Man Games</a>  |  <a href="http://www.gamerightnow.com/avengers.html" target="_blank"> The Avengers Games</a>  | <a href="http://www.gamerightnow.com/ben-10-ultimate-alien-games.html" target="_blank">Ben 10 Ultimate Alien Games</a> | <a href="http://www.gamechics.com/tags/power-rangers.html" target="_blank">Power Rangers Games</a> | <a href="http://www.gamebibi.com/tags/naruto.html" target="_blank">Naruto Games</a> | <a href="http://www.ofunnygames.com" target="_blank">Funny Games</a> | <a href="http://www.gameglobo.com" target="_blank">Spongebob Games</a> | <a href="http://www.gamestiny.com" target="_blank">Sonic Games</a> | <a href="http://www.dora-games.net/" target="_blank">Dora Games</a> | <a href="http://www.gamesgirl.ca">Free Girls Games</a> | <a href="http://www.gamesfree.ca">Free Games</a> | <a target="_blank" href="http://www.boy-games.net/">Games For Boys</a> | <a target="_blank" href="http://www.miniclipfriv.com/">miniclips</a> | <a href="http://www.gamehiphop.com/" target="_blank">Tom And Jerry Games</a> | <a href="http://www.gameglobo.com/play/1956-talking-tom-cat-3-online.html" target="_blank">Talking Tom Cat Online</a> | <a href="http://www.playcow.com/?r=57" target="_blank">Games, Walkthroughs, Help, Hints and Hacked Version</a> | <a href="http://www.dressupgames8.com/" target="_blank">Dress Up Games</a> | <a href="http://gamestiny.com/search/dragon-ball.html" target="_blank">Dragon Ball Fighting 1.9</a> | <a href="http://gamestiny.com/search/oggy-games.html" target="_blank">oggy games</a> | <a href="http://ben10alien.net/ben-10.html" target="_blank">ben 10 games</a> |  <a href="http://playpowerrangers.com/power-ranger.html" target="_blank">power rangers games</a> | <a target="_blank" href="http://gamestiny.com/search/doraemon-games.html">doraemon games</a></p>
+            <p><a href="http://www.scoobydoogame.net/" target="_blank">Scooby Doo Games</a> | <a href="http://www.gamechics.com/tags/power-rangers.html" target="_blank">Power Rangers Games</a> | <a href="http://www.gamerightnow.com/scooby-doo.html" target="_blank">Scooby Doo Games</a> | <a href="http://www.gamerightnow.com/bakugan.html" target="_blank"> Bakugan Games</a> |&nbsp;  <a href="http://www.gamerightnow.com/kungfu-panda.html" target="_blank"> Kungfu Panda games</a> |  <a href="http://www.gamerightnow.com/the-simpsons.html" target="_blank"> The Simpsons games</a> |  <a href="http://www.gamerightnow.com/hulk.html" target="_blank"> Hulk games</a> |  <a href="http://www.gamerightnow.com/ben-10.html" target="_blank"> Ben 10 games</a> |  <a href="http://www.gamerightnow.com/thor.html" target="_blank"> Thor games</a> |  <a href="http://www.gamerightnow.com/action-games/ultimate-spiderman-iron-spider-3460.html" target="_blank"> Ultimate Spider-Man Games</a> |  <a href="http://www.gamerightnow.com/avengers.html" target="_blank"> The Avengers Games</a></p>
+<p>| <a href="http://www.ofunnygames.com" target="_blank">Funny Games</a> | <a href="http://www.gameglobo.com" target="_blank">Spongebob Games</a> | <a href="http://www.gamestiny.com" target="_blank">Sonic Games</a> | <a href="http://www.dora-games.net/" target="_blank">Dora Games</a> | <a href="http://www.gamesgirl.ca">Free Girls Games</a> | <a href="http://www.gamesfree.ca">Free Games</a> | <a target="_blank" href="http://www.boy-games.net/">Games For Boys</a> | <a target="_blank" href="http://www.miniclipfriv.com/">miniclips</a> | <a href="http://www.gamehiphop.com/" target="_blank">Tom And Jerry Games</a> | <a target="_blank" href="http://www.ofunnygames.com/search/ninjago-games.html">Ninjago</a> | <a href="http://www.gameglobo.com/play/1956-talking-tom-cat-3-online.html" target="_blank">Talking Tom Cat Online</a> | <a href="http://www.playcow.com/?r=57" target="_blank">Games, Walkthroughs, Help, Hints and Hacked Version</a> | <a href="http://www.dressupgames8.com/" target="_blank">Dress Up Games</a> | <a href="/search/dragon-ball.html" target="_blank">Dragon Ball Fighting 1.9</a> | <a href="/search/oggy-games.html" target="_blank">oggy games</a> | <a href="http://ben10alien.net/ben-10.html" target="_blank">ben 10 games</a> |  <a href="http://playpowerrangers.com/power-ranger.html" target="_blank">power rangers games</a> | <a target="_blank" href="/search/doraemon-games.html">doraemon games</a></p>
+<p>&nbsp;</p>
         </div>
                 <div class="khung-footer-t"></div>
         <div class="khung-footer-c">
@@ -419,7 +432,8 @@ document.writeln("<SCR"+"IPT language='Javascript' src='http://server.cpmstar.co
 
 	document.writeln("<scr" + "ipt type='text/javascript' src='http://server.cpmstar.com/view.aspx?poolid=" + cpmstar_pid + "&script=1&rnd=" + cpmstar_rnd + "'><\/scr" + "ipt>");
 
-	</script><script type="text/javascript" src="http://server.cpmstar.com/view.aspx?poolid=32192&amp;script=1&amp;rnd=384199"></script>
+	</script><script type="text/javascript" src="http://server.cpmstar.com/view.aspx?poolid=32192&amp;script=1&amp;rnd=236477"></script>
+
 
 
 
