--- a/l/li/lin/linkbucksmedia.com.html
+++ b/l/li/lin/linkbucksmedia.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the linkbucksmedia.com privacy policy that was archived on 2013-06-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130601010059id_/http%3A//linkbucksmedia.com/policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the linkbucksmedia.com privacy policy that was archived on 2013-12-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224080217id_/http%3A//www.linkbucksmedia.com/policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
