--- a/f/fe/fel/fellowequality.com.html
+++ b/f/fe/fel/fellowequality.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fellowequality.com privacy policy that was archived on 2013-05-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130501104744id_/http%3A//fellowequality.com/pages/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fellowequality.com privacy policy that was archived on 2013-12-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224082852id_/http%3A//fellowequality.com/pages/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>
@@ -122,13 +122,13 @@ document.write(date + ", " + year + "</right>");
                             <td height="15" align="center"><font color="#FF9900"><b>Total Members:</b></font></td>
                           </tr>
                           <tr>
-                            <td height="15" align="center"><font color="#FFFFFF">74,530</font></td>
+                            <td height="15" align="center"><font color="#FFFFFF">81,262</font></td>
                           </tr>
                           <tr>
                             <td height="15" align="center"><font color="#FF9900"><b>Total Payouts:</b></font></td>
                           </tr>
                           <tr>
-                            <td height="15" align="center"><font color="#FFFFFF">322,726,200.00 $</font></td>
+                            <td height="15" align="center"><font color="#FFFFFF">381,599,800.00 $</font></td>
                           </tr>
                         </tbody></table></td>
                       </tr>
@@ -147,7 +147,7 @@ document.write(date + ", " + year + "</right>");
             <td width="550" align="center" valign="top" bgcolor="520A01">
              <table width="468" height="75" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
-    <td align="center" valign="bottom"><a href="http://fellowequality.com/scripts/runner.php?BA=40&amp;hash=406868ac2cf20a721a4e033c28d389c5&amp;url=http%3A%2F%2Fsnapmoods.com%2Fpages%2Findex.php%3Frefid%3Dapmoo" target="_blank"><img src="http://fellowequality.com/scripts/runner.php?REDIRECT=http%3A%2F%2Fsnapmoods.com%2Fimages%2Fbanner.gif&amp;hash=2850612a0fa1f4676fa0006e69d3344e" alt="" border="0"></a><br></td>
+    <td align="center" valign="bottom"><a href="http://fellowequality.com/scripts/runner.php?BA=5&amp;hash=d5911e36bf8d81883ab8b9d636a3fa3c&amp;url=http%3A%2F%2Fcooperativemail.com%2Fpages%2Findex.php%3Frefid%3Dkairo" target="_blank"><img src="http://fellowequality.com/scripts/runner.php?REDIRECT=http%3A%2F%2Fe-mailptr.com%2Fimages%2Fcoop.gif&amp;hash=f9ecd76fc0a2a692c5710ba633089f32" alt="" border="0"></a><br></td>
   </tr>
 </tbody></table>
 			<table width="85%" border="0" cellspacing="5" cellpadding="5" align="center">
